# rma_server

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
docker/django/: Dockerfile  django_entrypoint.sh  requirements.txt
rma_backend/: asgi.py  settings.py  urls.py  wsgi.py
