[tool.poetry]
name = "rma-server"
version = "0.1.0"
description = ""
authors = ["t0xa"]
readme = "README.md"
packages = [{include = "rma_server"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
